# pryr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: main.rs
src/lib/: cli.rs  config.rs  daemon.rs  ipc.rs  iqamah_calculator.rs  mod.rs  prayer_madhab.rs  prayer_manager.rs  prayer_method.rs  system.rs  updater.rs
src/lib/prayers/: day_schedule.rs  local.rs  manager.rs  mod.rs
src/lib/prayers_local/: madhab_local.rs  method_local.rs  mod.rs  prayer_local.rs
