[package]
name = "pryr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
salah = "0.7.6"
serde = { version= "1.0", features = ["derive"] }
toml = "1.0.3"
tokio = { version = "1.0", features = ["full"] }
notify-rust = "4"
serde_json = "1.0.149"
directories = "6.0.0"

[[bin]]
name = "pryrd"
path = "src/bin/daemon.rs"

[lib]
path = "src/lib/mod.rs"
