[package]
name = "pryr"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A blazing-fast, uncompromising Islamic prayer time daemon and screen locker for Linux and Windows"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
salah = "0.7.6"
serde = { version= "1.0", features = ["derive"] }
toml = "1.0.3"
tokio = { version = "1.0", features = ["full"] }
notify-rust = "4"
serde_json = "1.0.149"
directories = "6.0.0"
clap = { version = "4.5.60", features = ["derive"] }
owo-colors = "4.3.0"
ureq = "3.2.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Shutdown",
]


[[bin]]
name = "pryrd"
path = "src/bin/daemon.rs"

[[bin]]
name = "pryr"
path = "src/bin/cli.rs"

[lib]
path = "src/lib/mod.rs"
